@@ -2,17 +2,14 @@ Function: intnuminitgen
 Section: sums
 C-Name: intnuminitgen0
 Prototype: VGGED0,L,D0,L,p
-Help: intnuminitgen(t,a,b,ph,{m=0},{flag=0}): initialize tables for
+Help: intnuminitgen(t,a,b,ph,{m=0}): initialize tables for
  integrations from a to b using abscissas ph(t) and weights ph'(t). Note that
  there is no equal sign after the variable name t since t always goes from
  -infty to +infty, but it is ph(t) which goes from a to b, and this is not
- checked. If flag = 1 or 2, multiply the reserved table length by 4^flag, to
- avoid corresponding error.
+ checked.
 Doc: initialize tables for integrations from $a$ to $b$ using abscissas
  $ph(t)$ and weights $ph'(t)$. Note that there is no equal sign after the
  variable name $t$ since $t$ always goes from $-\infty$ to $+\infty$, but it
- is $ph(t)$ which goes from $a$ to $b$, and this is not checked. If \fl = 1
- or 2, multiply the reserved table length by $4^{\fl}$, to avoid corresponding
- error.
+ is $ph(t)$ which goes from $a$ to $b$, and this is not checked.
 
- \synt{intnuminitgen}{void *E, GEN (*eval)(void*,GEN), GEN a, GEN b, long m, long flag, long prec}
+ \synt{intnuminitgen}{void *E, GEN (*eval)(void*,GEN), GEN a, GEN b, long m, long prec}
